# Guess-the-number

./: CMakeLists.txt  README.md  main.cpp
saves/: ReadMe.txt
src/: computer.cpp  computer.h  game.cpp  game.h  generateNumber.cpp  generateNumber.h  player.cpp  player.h
